# grid

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile.ubi  Dockerfile  README.md  deny.toml  docker-compose.yml  flake.nix  server.js  unraid-template.xml
.github/workflows/: build-and-deploy.yml  ci.yml  docker-publish.yml
backend/: Cargo.toml
backend/debian/: changelog  postinst  postrm  prerm
backend/src/: auth.rs  config.rs  handlers.rs  main.rs  state.rs  static_files.rs  utils.rs
backend/src/auth/: handlers.rs  mod.rs
backend/src/middleware/: static_files.rs
backend/src/routes/auth/: logout.rs  mod.rs  pin_required.rs  verify_pin.rs
backend/src/routes/tasks/: mod.rs
backend/tests/: container_smoke.rs
data/: tasks.json
frontend/: Cargo.toml  index.html
frontend/Assets/: login.css  service-worker.js  styles.css
frontend/Assets/shared-assets/: CHANGELOG.md  README.md
frontend/Assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-core/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
frontend/src/: app.rs  app_update.rs  app_update_handlers.rs  app_view.rs  board_normalizer.rs  header.rs  i18n.rs  main.rs  storage.rs  types.rs
frontend/src/app/: storage_helpers.rs  update.rs  view.rs
frontend/src/app/update_handlers/: auth_config.rs  task_crud.rs
frontend/src/components/: board.rs  mod.rs  pin.rs  task_modal.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  mod.rs  pt.rs  ru.rs  zh.rs
