[package]
name = "backend"
version = "3.0.19"
edition = "2024"
authors = ["UberMetroid"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Grid"
homepage = "https://github.com/UberMetroid/Grid"
description = "Axum backend service for Grid."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.18" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.18" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
ipnet = "2.9"
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
regex = "1.10"
indexmap = { version = "2.2", features = ["serde"] }
sha2 = "0.11"
constant_time_eq = "0.3"



