[package]
name = "frontend"
version = "1.0.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-utils = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
indexmap = { version = "2.2", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlSelectElement",
  "Window",
  "Document",
  "Event",
  "InputEvent",
  "MouseEvent",
  "KeyboardEvent",
  "FocusEvent",
  "Location",
  "Navigator",
  "Storage",
  "Headers",
  "Response",
  "MediaQueryList",
  "DragEvent",
  "DataTransfer",
  "HtmlFormElement"
]
