[package]
name = "frontend"
version = "2.0.0"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/Grid"
homepage = "https://github.com/UberMetroid/Grid"
description = "Yew frontend application for Grid."
readme = "../README.md"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.7"
gloo-utils = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
indexmap = { version = "2.2", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlSelectElement",
  "Window",
  "Document",
  "Event",
  "InputEvent",
  "MouseEvent",
  "KeyboardEvent",
  "FocusEvent",
  "Location",
  "Navigator",
  "Storage",
  "Headers",
  "Response",
  "MediaQueryList",
  "DragEvent",
  "DataTransfer",
  "HtmlFormElement"
]
